perf: q1 memory performance

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,6 +526,65 @@
    ],
    "source": [
     "display(SVG(data='../results/q1_time.svg'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Memory\n",
+    "* En el caso del uso de memoria para este problema, la estructura de la solución es parecida en cuanto a las subfunciones, pero cambia el contenido para priorizar la memoria en vez del tiempo. La primera diferencia es que en este caso, en vez de almacenar en formato `datetime.date`, se almacena `str`con la fecha.\n",
+    "* La función `group_by_date` recorre todos los tweets que hay y agrupa en un diccionario de diccionario la cantidad de tweets por usuario por cada día. A diferencia de la solución anterior, solo se crea un diccionario para reducir la memoria usada a cambio del tiempo de más que se va a demorar para calcular el total de tweets por día. \n",
+    "* En la función `popular_dates` se calcula las 10 fechas más populares en formato de una lista de `str`. Para esto se toman los 10 elementos más grandes segun la cantidad total de tweets (sumando todos los tweets de todos los usuarios por fecha, el trade-off que se comentó previamente). Luego se toman sólo las fechas y no el conteo para hacer uso de menos memoria. \n",
+    "* La tercera función `popular_users` reocrre cada una de las top 10 fechas y encuentra el usuario con más tweets. Esta retorna una lista de largo 10 de solo `str` con los usernames.\n",
+    "* Finalmente, se retorna una lista con las fehcas en formato `str` y los username en el mismo tipo. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('20210212', 'RanbirS00614606'),\n",
+       " ('20210213', 'MaanDee08215437'),\n",
+       " ('20210217', 'RaaJVinderkaur'),\n",
+       " ('20210216', 'jot__b'),\n",
+       " ('20210214', 'rebelpacifist'),\n",
+       " ('20210218', 'neetuanjle_nitu'),\n",
+       " ('20210215', 'jot__b'),\n",
+       " ('20210220', 'MangalJ23056160'),\n",
+       " ('20210223', 'Surrypuria'),\n",
+       " ('20210219', 'Preetm91')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from q1_memory import q1_memory\n",
+    "\n",
+    "q1_memory(file_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La imagen de abajo muestra el uso de memora en función del tiempo. También, en el archivo ../results/q1_memory.txt, se tiene el uso de memoria línea por línea."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "<img src=\"../results/q1_memory.png\" width=\"1000\"/>\n",
+    "</div>"
    ]
   }
  ],
