perf: q2 memory performance

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -1080,6 +1080,60 @@
    "source": [
     "display(SVG(data='../results/q2_time.svg'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Memory\n",
+    "\n",
+    "* Al igual que en el caso anterior, para este se dividió la función final en `count_emojis` para obtener el conteo de emojis y `top_emojis` para calcular los emojis más populares. \n",
+    "* La primera función crea el patrón de regex que se instancia una vez y tiene un uso de memoria constante, es decir $O(1)$. Luego se lee el archivo y se va leyendo línea por línea para hacer más eficiente el uso de memoria y no leer el archivo completo. Al guardar el conteo de emojis en el diccionario se utiliza memoria proporcional a la cantidad de emojis que hayan $O(n)$. \n",
+    "* La siguiente función utiliza un min-heap para calcular los 10 emojis más populares, esto tiene una complejidad de $O(10)$ que como es una constante se considera $O(1)$. \n",
+    "* Finalmente, la combinación de ambas funciones tiene una complejidad de memoria de $O(n)$. También, para reducir la memoria usada, se utilizó un diccionario en lugar de un `Counter`, esto ya que si bien ambos tienen la misma complejidad de memoria, el contador es una clase que en la práctica usa más memoria."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('🙏', 7286),\n",
+       " ('😂', 3072),\n",
+       " ('🚜', 2972),\n",
+       " ('✊', 2411),\n",
+       " ('🌾', 2363),\n",
+       " ('🇮', 2096),\n",
+       " ('🇳', 2094),\n",
+       " ('🏻', 2080),\n",
+       " ('❤', 1779),\n",
+       " ('🏽', 1218)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from q2_memory import q2_memory\n",
+    "\n",
+    "q2_memory(file_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La imagen que se ve abajo muestra el uso de memoria del programa. El detalle de la memoria utilizada línea por línea se encuentra en ../results/q2_memory.txt, en este archivo se ve que no hay ningún uso excesivo de memoria para ninguna línea del código, lo que sugiere un uso eficiente de esta.\n",
+    "\n",
+    "<div>\n",
+    "<img src=\"../results/q2_memory.png\" width=\"1000\"/>\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
