perf: popular users memory performance

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -1631,6 +1631,60 @@
    "source": [
     "display(SVG(data='../results/q3_time.svg'))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Memory\n",
+    "\n",
+    "* La estructura en este caso es parecida a los anteriores, primero se extrae el conteo de las menciones de usuario con la función `user_mentions` y luego se calculan los 10 más populares en la función `top_users`. \n",
+    "* En `user_mentions`, aunque un Counter y un diccionario tienen la misma complejidad de memoria teórica ($O(n)$, donde $n$ es la cantidad de usuarios), en la práctica el diccionario utiliza menos al de menor nivel. Para la lectura del archivo, se lee línea por línea y sólo se consideran los objetos de interés (username de los usuarios mencionados) por lo que el uso de memoria es chico. La complejidad de esta función por lo tanto es $O(n)$.\n",
+    "* Para el caso de `top_users`, en lugar de usar directamente el método de nlargest de heapq, se crea un min-heap de tamaño 10. De esta forma nunca se tiene una lista de un tamaño mayor a $10$ lo que tiene una complejidad de $O(10) = O(1)$.\n",
+    "* En resumen, la complejidad total de memoria es de $O(n)$, es decir, dependiente del número total de usuarios que hayan sido mencionados. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('narendramodi', 2265),\n",
+       " ('Kisanektamorcha', 1840),\n",
+       " ('RakeshTikaitBKU', 1644),\n",
+       " ('PMOIndia', 1427),\n",
+       " ('RahulGandhi', 1146),\n",
+       " ('GretaThunberg', 1048),\n",
+       " ('RaviSinghKA', 1019),\n",
+       " ('rihanna', 986),\n",
+       " ('UNHumanRights', 962),\n",
+       " ('meenaharris', 926)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from q3_memory import q3_memory\n",
+    "\n",
+    "q3_memory(file_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para los resultados, se puede ver que el código utiliza 50MB de memoria. Sin embargo, en el detalle de línea por línea en ../results/q3_memory.txt se puede observar que las funciones creadas solo agregan menos de 2MB al uso total y estos provienen de la función `user_mentions`. También se puede ver que la función  `top_users` no suma nada (o casi nada) al uso total, ya que como se dijo anteriormente, es un listado de largo 10 constante. \n",
+    "\n",
+    "<div>\n",
+    "<img src=\"../results/q3_memory.png\" width=\"1000\"/>\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
