fix: correct format

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para todas las respustas se va a considerar que m es el número de tweets."
+    "Para todas las respustas se va a considerar que $m$ es el número de tweets."
    ]
   },
   {
