docs: popular dates memory optimization results

--- a/src/challenge.ipynb
+++ b/src/challenge.ipynb
@@ -537,10 +537,10 @@
    "source": [
     "#### Memory\n",
     "* En el caso del uso de memoria para este problema, la estructura de la solución es parecida en cuanto a las subfunciones, pero cambia el contenido para priorizar la memoria en vez del tiempo. La primera diferencia es que en este caso, en vez de almacenar en formato `datetime.date`, se almacena `str`con la fecha.\n",
-    "* La función `group_by_date` recorre todos los tweets que hay y agrupa en un diccionario de diccionario la cantidad de tweets por usuario por cada día. A diferencia de la solución anterior, solo se crea un diccionario para reducir la memoria usada a cambio del tiempo de más que se va a demorar para calcular el total de tweets por día. \n",
-    "* En la función `popular_dates` se calcula las 10 fechas más populares en formato de una lista de `str`. Para esto se toman los 10 elementos más grandes segun la cantidad total de tweets (sumando todos los tweets de todos los usuarios por fecha, el trade-off que se comentó previamente). Luego se toman sólo las fechas y no el conteo para hacer uso de menos memoria. \n",
-    "* La tercera función `popular_users` reocrre cada una de las top 10 fechas y encuentra el usuario con más tweets. Esta retorna una lista de largo 10 de solo `str` con los usernames.\n",
-    "* Finalmente, se retorna una lista con las fehcas en formato `str` y los username en el mismo tipo. "
+    "* La función `group_by_date` recorre todos los tweets que hay y agrupa en un diccionario de diccionario la cantidad de tweets por usuario por cada día. A diferencia de la solución anterior, solo se crea un diccionario para reducir la memoria usada a cambio del tiempo de más que se va a demorar para calcular el total de tweets por día. Esta función tiene una complejidad de memoria de $O(n \\cdot u)$, donde $n$ es la cantidad de fechas únicas y $u$ es la cantidad promedio de usuarios únicos por fecha.\n",
+    "* En la función `popular_dates` se calcula las 10 fechas más populares en formato de una lista de `str`. Para esto se toman los 10 elementos más grandes segun la cantidad total de tweets (sumando todos los tweets de todos los usuarios por fecha, el trade-off que se comentó previamente). Luego se toman sólo las fechas y no el conteo para hacer uso de menos memoria. En este caso, se usa un min-heap de tamaño 10 para tener las 10 fechas más populares, como es un tamaño constante, la complejidad de memoria es de $O(1)$. \n",
+    "* La tercera función `popular_users` reocrre cada una de las top 10 fechas y encuentra el usuario con más tweets. Esta retorna una lista de largo 10 de solo `str` con los usernames. Por último, esta función recorre el min-heap con las fechas más populares y obtiene el usuario que más contribuyo para cada una de estas. Al igual que en la anterior, como el tamaño de esta lista es constante, la complejidad es de $O(1)$.\n",
+    "* Finalmente, se retorna una lista con las fehcas en formato `str` y los username en el mismo tipo. En conclusión, la complejidad es de $O(n\\cdot u)$."
    ]
   },
   {
@@ -578,7 +578,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La imagen de abajo muestra el uso de memora en función del tiempo. También, en el archivo ../results/q1_memory.txt, se tiene el uso de memoria línea por línea."
+    "La imagen de abajo muestra el uso de memora en función del tiempo. También, en el archivo ../results/q1_memory.txt, se tiene el uso de memoria línea por línea. Ahí se puede ver que tal como lo dice la teoría, el uso de memoria de `popular_dates` y `popular_users` es de 0 ya que tienen un tamaño constante y chico. Todo el uso de memoria de la solución proviene de la función `group_by_date` ya que ahí se almacena el diccionario con toda la información de tweets.\n",
+    "\n",
+    "En este caso se pueden utilizar tecnologías como Apache Spark para procesar la base de datos de gran tamaño con los tweets a través de distintos máquinas y así se disminuye la carga sobre una sola. "
    ]
   },
   {
